--- a/GlobalCartapp/templates/payment_successcart.html
+++ b/GlobalCartapp/templates/payment_successcart.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <script type="text/JavaScript">
-      setTimeout("location.href = '{% url 'GlobalCartapp:Bookitem' pk %}'",15000);
+      setTimeout("location.href = '{% url 'GlobalCartapp:Bookcart' %}'",15000);
+
 </script>
-<div class="mdl-spinner mdl-js-spinner is-active" style="margin-left:500px;margin-top:30px;height:70px;width:70px"></div>
 <h3 style="margin-left:300px"><b>Thank you for using GlobalCart</b></h3>
 <h4 style="margin-left:350px"> PAYMENT PROCESSING </h4>
 <h5 style="margin-left:350px"><b>Please dont press backbutton </b></h5>
