--- a/GlobalCartapp/templates/itemdetails.html
+++ b/GlobalCartapp/templates/itemdetails.html
@@ -1,87 +1,114 @@
 {% extends "_base.html"%}
 
 {% block content %}
-
-<!--<style>-->
-        <!--.demo-card-square.mdl-card {-->
-        <!--width: 320px;-->
-        <!--height: 320px;-->
-        <!--}-->
-        <!--.demo-card-square > .mdl-card__title {-->
-            <!--color: #fff;-->
-        <!--}-->
-
-
-
-
 <!--</style>-->
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js">
+</script>
+<script type='text/javascript'>
 
-<center>
+    function wishlist()
+    {
+        alert("Already Added check wishlist ");
+    }
+
+    function preorder()
+    {
+    alert("Already preordered check preorders");
+    }
 
 
-    <table class="table">
-    <tr>
-    {% if object %}
-    <th>name</th>
-    <th>Image</th>
-    <th>price</th>
-    <th>category</th>
-    <th style="white-space: pre;"> CART  </th>
-    <th>options</th>
-    {% endif %}
-    </tr>
+
+
+
+</script>
+
+<style>
+    a {
+        text-decoration: none !important;
+    }
+    .material-icons {
+        display: inline-flex;
+        vertical-align: middle;
+    }
+    .mdl-card__title{
+        align:center !important;
+    }
+
+
+</style>
+<br>
+<div class="mdl-grid">
     {% for obj in object %}
-    <tr>
-    <td>
-    {{obj.name}}
-    </td>
-    <td>
-    {% if obj.image %}
-        <a href="{% url 'GlobalCartapp:itemcompleteinfo' obj.id %}">
-            <img src="{{obj.image.url}}" width="100px" height="150px" style=""/>
-        </a>
-    {% endif %}
-    </td>
-    <td>{{obj.price}}</td>
-    <td>{{obj.category}}</td>
-    <td style="white-space: pre;"><a href="{% url 'GlobalCartapp:addtocart' obj.id %}"
-    class="btn btn-default active;btn btn-info btn-sm">ADD
-    TO CART</a>
-    </td>
-    <td>
-    <div class="dropdown">
-    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">MARK
-    <span class="caret"></span></button>
-    <ul class="dropdown-menu">
-    <li class="dropdown-item"><a href="{% url 'GlobalCartapp:addtowishlist' obj.id %}">wishlist</a>
-    </li>
-    <li class="dropdown-item"><a
-    href="{% url 'GlobalCartapp:addtopreorderlist' obj.id %}">preorder</a></li>
-    </ul>
+    <div class="mdl-cell mdl-cell--3-col">
+        <div class="mdl-card mdl-shadow--4dp" style="width:240px;text-align:center;">
+            {% if obj.name in wish %}
+            <a style="margin-left:190px;margin-top:18px;">
+                <i class="material-icons">favorite</i></a>
+            {% else %}
+            <a href="{% url 'GlobalCartapp:addtowishlist' obj.id %}" style="margin-left:190px;margin-top:18">
+            <button id="add-to-favorites"
+                    class="mdc-icon-button material-icons">favorite_border
+            </button>
+            </a>
+            {% endif %}
+            <a href="{% url 'GlobalCartapp:itemcompleteinfo' obj.id %}">
+                <img src="{{obj.image.url}}" height="130px" style="margin: auto; padding-top:12px;"/>
+            </a>
+
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">{{obj.name}}</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                <strong style="color:black">price:{{obj.price}}</strong>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                {% if obj.name in cart %}
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised"
+                   href="{% url 'GlobalCartapp:cartitems' %}">
+                    <i class="material-icons">shopping_cart</i> Go to Cart
+                </a>
+                {% else %}
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised"
+                   href="{% url 'GlobalCartapp:addtocart' obj.id %}">
+                    <i class="material-icons">shopping_cart</i> Add to cart
+                </a>
+                {% endif %}
+                <button id="demo-menu-top-right-{{obj.id}}"
+                        class="pull-right mdl-button mdl-js-button mdl-button--icon">
+                    <i class="material-icons">more_vert</i>
+                </button>
+            </div>
+            <ul class="mdl-menu mdl-menu--top-right mdl-js-menu mdl-js-ripple-effect"
+                data-mdl-for="demo-menu-top-right-{{obj.id}}">
+                {% if obj.name in wish %}
+                <li class="mdl-menu__item">
+                    <a onclick="wishlist()"><i class="material-icons">favorite</i>
+                        Wishlisted</a>
+                </li>
+                {% else %}
+                <li class="mdl-menu__item">
+                    <a href="{% url 'GlobalCartapp:addtowishlist' obj.id %}"><i class="material-icons">favorite</i>
+                        Wishlist</a>
+                </li>
+                {% endif %}
+
+                {% if obj.name in preorder %}
+                <li class="mdl-menu__item">
+                    <a onclick="preorder()"> <i class="material-icons">send</i>
+                        Preordered </a>
+                </li>
+                {% else %}
+                <li class="mdl-menu__item">
+                    <a href="{% url 'GlobalCartapp:addtopreorderlist' obj.id %}"><i class="material-icons">send</i>
+                        Preorder </a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
-    </td>
-    {% endfor %}
-    </table>
-
-    <!-- Square card -->
-
-    <!--{% for obj in object %}-->
-    <!--<div class="demo-card-square mdl-card mdl-shadow&#45;&#45;2dp">-->
-        <!--<div class="mdl-card__title mdl-card&#45;&#45;expand"-->
-             <!--style="background:url('{{obj.image.url}}');height:200px;width:200px">-->
-            <!--<h2 class="mdl-card__title-text">{{obj.name}}</h2>-->
-        <!--</div>-->
-        <!--<div class="mdl-card__supporting-text">-->
-            <!--<h4>price:{{obj.price}}</h4>-->
-            <!--<h4>category:{{obj.category}}</h4>-->
-        <!--</div>-->
-        <!--<div class="mdl-card__actions mdl-card&#45;&#45;border">-->
-            <!--<a class="mdl-button mdl-button&#45;&#45;colored mdl-js-button mdl-js-ripple-effect"-->
-               <!--href="{% url 'GlobalCartapp:addtocart' obj.id %}">-->
-                <!--ADD TO CART-->
-            <!--</a>-->
-        <!--</div>-->
-    <!--</div>-->
-    <!--{% endfor %}-->
-</center>
+    {%endfor%}
+</div>
+<br>
 {% endblock %}
