--- a/GlobalCartapp/templates/preorderinfo.html
+++ b/GlobalCartapp/templates/preorderinfo.html
@@ -1,29 +1,34 @@
 {% extends "_base.html"%}
 
 {% block content %}
-<center>
-    <table class="table">
-        <tr>
-            <!--<th>Id</th>-->
-            <th>item</th>
-            <th>Image</th>
-            <th>user</th>
-            <th>price</th>
-            <th>operation</th>
-        </tr>
-        {% for obj in object %}
-        <tr>
-            <td>{{obj.item}}</td>
-            <td>
-                {% if obj.image %}
-                <img src="{{obj.image.url}}" width="50px" height="50px" style=""/>
-                {% endif %}
-            </td>
-            <td>{{obj.user}}</td>
-            <td>{{obj.price}}</td>
-            <td><a href="{% url 'GlobalCartapp:deletepreorderitem' obj.id %}" class="btn btn-default active;btn btn-info btn-sm">delete</a></td>
-        </tr>
-        {% endfor %}
-    </table>
-</center>
+{% if object %}
+<center><h4>YOUR-PREORDERS</h4></center>
+<div class="mdl-grid">
+    {% for obj in object %}
+    <div class="mdl-cell mdl-cell--4-col">
+        <div class="mdl-card mdl-shadow--4dp" style="width:240px;text-align:center;">
+            <a href="{% url 'GlobalCartapp:itemcompleteinfo' obj.item_id %}">
+                <img src="{{obj.image.url}}" height="150px" style="margin: auto; padding-top:12px;"/>
+            </a>
+            <div class="mdl-card__title">
+                <h2 class="mdl-card__title-text">{{obj.item}}</h2>
+            </div>
+            <div class="mdl-card__supporting-text">
+                <strong style="font-size:19px">price:{{obj.price}}</strong>
+            </div>
+            <div class="mdl-card__actions mdl-card--border">
+                <a class="mdl-button mdl-button--colored mdl-js-button mdl-js-ripple-effect mdl-button--raised"
+                   style="text-decoration:none"
+                   href="{% url 'GlobalCartapp:deletepreorderitem' obj.id %}"><i
+                        class="material-icons">delete</i>
+                    Remove
+                </a>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+</div>
+{% else %}
+<center><h4>EMPTY-ORDERS</h4></center>
+{% endif %}
 {% endblock %}
